:wrench: fix: adjusting description wrap

--- a/static/estoque/css/styles.css
+++ b/static/estoque/css/styles.css
@@ -47,6 +47,7 @@
     color: #555;
     margin-bottom: 10px;
     min-height: 50px;
+    word-wrap: break-word;
 }
 
 .product-price,
